# audiotag

./: .gitignore  Makefile  README.md  audiotag.cc  audiotag.h  audiotagfile.cc  audiotagfile.h  audiotagmeta.cc  audiotagmeta.h  audiotagmetaout.cc  audiotagmetaout.h  audiotagops.h  configure.ac  test-pic.m4a
.github/workflows/: ubuntu.yml
src/: Artwork.h  File.cc  File.h  Makefile.am  Makefile.orig  Meta.cc  Meta.h  MetaFlac.cc  MetaM4a.cc  MetaMP3.cc  MetaOut.cc  MetaOut.h  Ops.cc  Ops.h  audiotag.cc  audiotag.h  audiotagfile.cc  audiotagfile.h  audiotagmeta.cc  audiotagmeta.h  audiotagmetaout.cc  audiotagmetaout.h  audiotagops.cc  audiotagops.h
tests/: Makefile.am  taglib-artwork.cc  taglib.cc  test-pic.flac  test-pic.m4a  test.flac  test.m4a
